# openapi/openapi.yaml
@@ -132,6 +132,25 @@ paths:
                 $ref: '#/components/schemas/User'
 
   /users/{id}:
+    get:
+      summary: Get user by ID with tasks
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: User details with tasks
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserWithTasks'
+        '404':
+          description: User not found
     patch:
       summary: Update user by ID
       tags:
@@ -173,6 +192,29 @@ paths:
           description: User deleted
         '404':
           description: User not found
+  /users/{id}/tasks:
+    get:
+      summary: Get all tasks for individual user
+      tags:
+        - users
+        - tasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: A list of user`s tasks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
+        '404':
+          description: User not found
 
 components:
   schemas:
@@ -187,10 +229,14 @@ components:
         is_done:
           type: boolean
           x-go-name: IsDone
+        user_id:
+          type: string
+          x-go-name: UserID
       required:
         - id
         - name
         - is_done
+        - user_id
 
     TaskRequest:
       type: object
@@ -201,8 +247,12 @@ components:
           type: boolean
           default: false
           x-go-name: IsDone
+        user_id:
+          type: string
+          x-go-name: UserID
       required:
         - name
+        - user_id
 
     TaskUpdate:
       type: object
@@ -212,6 +262,9 @@ components:
         is_done:
           type: boolean
           x-go-name: IsDone
+        user_id:
+          type: string
+          x-go-name: UserID
 
     UserRequest:
       type: object
@@ -246,3 +299,22 @@ components:
           type: string
         password:
           type: string
+
+    UserWithTasks:
+      type: object
+      properties:
+        id:
+          type: string
+        email:
+          type: string
+        password:
+          type: string
+        tasks:
+          type: array
+          items:
+            $ref: '#/components/schemas/Task'
+      required:
+        - id
+        - email
+        - password
+        - tasks
